test/conformance/chainsaw/validate/e2e/trusted-images-deprecated/bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-root-user-dockerhub
  # namespace: default
spec:
  containers:
  - name: ubuntu
    image: ubuntu:bionic
