test/conformance/chainsaw/validate/e2e/trusted-images-deprecated/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: trusted-images
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: check-trustable-images
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1-1.yaml
  - name: step-03
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad.yaml
